# mygbc

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE-INPUTTINO  Makefile  README.md
src/: CMakeLists.txt  addressable_memory.cc  addressable_memory.h  binary_reader.h  gbc.cc  gbc.h  gbc_binary.cc  gbc_binary.h  main.cc  util.h
src/components/: lr35902.cc  lr35902.h  lr35902_register_file.cc  lr35902_register_file.h  memory_controller.cc  memory_controller.h
src/components/instruction_set_lr35902/: instruction_decoder_lr35902.h  instruction_lr35902.cc  instruction_lr35902.h  instruction_set_lr35902.cc  instruction_set_lr35902.h
src/instruction_set_lr35902/: instruction_decoder_lr35902.h  instruction_executor_lr35902.cc  instruction_executor_lr35902.h  instruction_lr35902.cc  instruction_lr35902.h  instruction_set_lr35902.cc  instruction_set_lr35902.h
src/memory/: addressable_memory.cc  addressable_memory.h  gbc_binary.cc  gbc_binary.h  memory_mapped_register_8bit.cc  memory_mapped_register_8bit.h  register.cc  register.h  register_16bit.cc  register_16bit.h  system_memory_interface.h
src/util/: binary_reader.cc  binary_reader.h  util.cc  util.h
src/util/io/: binary_reader.cc  binary_reader.h  log_message.cc  log_message.h  logger.cc  logger.h
src/util/status/: bad_status_or_access.cc  bad_status_or_access.h  status.cc  status.h  status_or.h
test/: CMakeLists.txt  addressable_memory_test.cc  gbc_binary_test.cc
test/instruction_set_lr35902/: instruction_decoder_lr35902_test.cc
test/memory/: addressable_memory_test.cc  gbc_binary_test.cc  register_test.cc
test/util/: util_test.cc
test/util/status/: status_or_test.cc  status_test.cc
